gcc/testsuite/rust/rustc/ui/macros/issue-109237.rs
macro_rules! statement {
    () => {;}; // { dg-error "" "" { target *-*-* } }
}

fn main() {
    let _ = statement!();
}

